--- a/Illumina_QC/02-Cluster_Introduction.Rmd
+++ b/Illumina_QC/02-Cluster_Introduction.Rmd
@@ -13,7 +13,7 @@ You will now be in a logged-in Linux VNC desktop with two terminals. You will se
 
 If the VNC is taking up too much/little space of your browser you can use the zoom of your browser to adjust the size. Ensure you can see one whole terminal.
 
-These instructions will not work outside of this workshop. If you would like to install your own Linux OS on your desktop or laptop we would recommend Mint Linux 
+These instructions will not work outside of this workshop. If you would like to install your own Linux OS on your desktop or laptop we would recommend Mint Linux. 
 
 The following link is a guide to install Mint Linux:  
 https://linuxmint-installation-guide.readthedocs.io/en/latest/
