--- a/long_read_qc/05-NanoStat.Rmd
+++ b/long_read_qc/05-NanoStat.Rmd
@@ -46,7 +46,7 @@ The file contains four sections with informative headers. These are:
    - A list of general summary metrics.
 2. __Number, percentage and megabases of reads above quality cutoffs__
    - Based on the mean quality value of a read.
-   - The \">Q5\" line shows the number and % of reads with a mean quality above Q5. It also shows the total amount of megabases these reads contain.
+   - The \">Q10\" line shows the number and % of reads with a mean quality above Q10. It also shows the total amount of megabases these reads contain.
 3. __Top 5 highest mean basecall quality scores and their read lengths__
    - Shows the top 5 reads with the highest mean quality scores.
 4. __Top 5 longest reads and their mean basecall quality score__
@@ -90,24 +90,24 @@ opts_p <- c("__5,770__", answer="__6,700.5__", "__25,072__")
 6.  What is the median read length of the data? `r longmcq(opts_p)`
 
 ```{r, echo = FALSE}
-opts_p <- c("__0.2Mb__", "__8.8Mb__", answer="__14.1Mb__")
+opts_p <- c("__0.0Mb__", "__8.8Mb__", answer="__14.1Mb__")
 ```
 7.  To the nearest 0.1 Megabases (i.e. 100,000 bases), what is the total number of bases of the data? `r longmcq(opts_p)`
 
 ```{r, echo = FALSE}
-opts_p <- c("__0.2Mb__", answer="__8.8Mb__", "__14.1Mb__")
+opts_p <- c("__0.0Mb__", answer="__8.8Mb__", "__14.1Mb__")
 ```
 8.  How many Megabases are within reads with a quality cutoff of >Q10?  `r longmcq(opts_p)`
 
 ```{r, echo = FALSE}
-opts_p <- c("__0.2Mb__", "__8.8Mb__", answer="__14.1Mb__")
+opts_p <- c(answer="__0.0Mb__", "__8.8Mb__", answer="__14.1Mb__")
 ```
-9. How many Megabases are within reads with a quality cutoff of >Q5? `r longmcq(opts_p)`
+9. How many Megabases are within reads with a quality cutoff of >Q15? `r longmcq(opts_p)`
 
 ```{r, echo = FALSE}
-opts_p <- c(answer="__0.2Mb__", "__8.8Mb__", "__14.1Mb__")
+opts_p <- c(answer="__5.3Mb__", "__8.8Mb__", answer="__14.1Mb__")
 ```
-10.  How many Megabases are within reads with a quality cutoff of >Q12? `r longmcq(opts_p)`
+9.  To the nearest 0.1 Megabases (i.e. 100,000 bases), what is the total number of bases within reads with a mean quality of Q10 or less (you will need to do some mental maths)? `r longmcq(opts_p)`
 
 ## NanoStat: summary
 <center>
