--- a/long_read_qc/09-ONT_final_check.Rmd
+++ b/long_read_qc/09-ONT_final_check.Rmd
@@ -10,21 +10,21 @@ After trimming or filtering reads (quality control) it is always important to ca
 ![](figures/nanoplot_hexes.png){style="width:200px"}
 </center>
 
-__Note__: We are using a long informative output directory name. This is important as we may need to rerun NanoFilt a few more times with different options until we are happy. 
+__Note__: We are using a long informative output directory name. This is important as we may need to rerun `chopper` a few more times with different options until we are happy. 
 
 ```{bash eval=FALSE}
 #Make an output directory before running NanoPlot
-mkdir nanoplot/nanofiltq10minlen500_porechop
+mkdir nanoplot/chopperq10minlen500_porechop
 #Run NanoPlot on the fastq file with the filtered and porechopped data
 NanoPlot -t 4 \
---fastq nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq \
--o nanoplot/nanofiltq10minlen500_porechop/ -p Acinetobacter_
+--fastq chopper/Acinetobacter.chopperq10minlen500.porechop.fastq \
+-o nanoplot/chopperq10minlen500_porechop/ -p Acinetobacter_
 ```
 
 Now inspect the report
 
 ```{bash, eval=FALSE}
-firefox nanoplot/nanofiltq10minlen500_porechop/Acinetobacter_NanoPlot-report.html
+firefox nanoplot/chopperq10minlen500_porechop/Acinetobacter_NanoPlot-report.html
 ```
 
 ## ONT QC considerations
@@ -40,14 +40,14 @@ A quick example is data for a genome assembly. For this type of analysis we will
 
 In addition to the amount of bases, the length of reads is also important. One read that is 10kbp long is likely better than 10 reads that are each 1kbp long for a genome assembly. This is because less reads need to be assembled.
 
-## NanoFilt Reattempts
+## Chopper Reattempts
 <center>
 ![](figures/retry.png){style="width:200px; border-radius:15px; border:5px solid white; background:white"}
 </center>
 
-Keeping all this in mind, let's say this sequencing is for a genome with a size of 0.5 Mbp (0.5 million base pairs). We want at least 20X coverage (i.e 10,000,000 total bases). Do we have this for the data that was porechopped and nanofiltered?
+Keeping all this in mind, let's say this sequencing is for a genome with a size of 0.5 Mbp (0.5 million base pairs). We want at least 20X coverage (i.e 10,000,000 total bases). Do we have this for the data that was porechopped and chopper'd?
 
-If not, try running `NanoFilt` with a different choice for `--q` until you do. Then attempt to answer the questions below. These aren't MCQs as you will get different answers based on what value you use for `--q`.
+If not, try running `chopper` with a different choice for `-q` until you do. Then attempt to answer the questions below. These aren't MCQs as you will get different answers based on what value you use for `-q`.
 
 + What is an option that works to get the desired coverage? 
 + Is the overall quality decent (Mean & Median read quality > 10)?
@@ -71,5 +71,5 @@ We carried out:
 - `NanoStat`: Produced read quality and length stats of our raw reads.
 - `Porechop`: Removed adapters from our reads.
 - `NanoPlot`: Produced read quality and length stats and plots of our porechopped reads.
-- `NanoFilt`: Filtered our porechopped reads based on quality and length.
+- `chopper`: Filtered our porechopped reads based on quality and length.
 - Final check: `NanoPlot` of our filtered reads. It is always good to check the quality after every quality control step.
