--- a/long_read_qc/10-PB_background.Rmd
+++ b/long_read_qc/10-PB_background.Rmd
@@ -5,14 +5,14 @@
 ![](figures/logo_PacBio_web_RGB-1.png){style="width:400px; border-radius:15px; background:white"}
 </center>
 
-In this section we will quality check PacBio sequencing raw data (BAM files), perform a filter to retain only the longest reads and output the data in fastq format.
+In this section we will convert PacBio sequencing data (BAM files) into fastq files, filter out any adapter sequences and generate quality control plots and statistics.
 
 ## File formats
 <center>
 ![](figures/files.png){style="width:150px"}
 </center>
 
-Sequence data from PacBio are output as subreads in unaligned BAM format. (Further explanation of the BAM format is in section 3.1.3).
+Sequence data from PacBio are output as subreads in unaligned BAM format. (Further explanation of the BAM format is in section 3.1.4).
 
 The figure below shows a schematic of a circular DNA molecule of a PacBio library with the colours representing:
 
@@ -35,50 +35,39 @@ A ZMW read consists of the data collected from a single ZMW, with the HQ (high q
 </center>
 
 This schematic shows the structure of a ZMW read in linear format. Insert DNA subreads are interspersed with the barcode and adapter sequence of the SMRTbell library.
-For more information see: https://pacbiofileformats.readthedocs.io/en/10.0/Primer.html
+For more information see: https://pacbiofileformats.readthedocs.io/en/13.0/Primer.html
 
-__subreads.bam file__
 
-This contains the sequence for each read (or pass) of the insert DNA (grey).
+## HiFi reads
 
-__scraps.bam file__
+The ZMW reads are processed on the sequencing instrument to produce HiFi reads, using the circular consensus (CCS) tool. CCS generates high accuracy sequences from a consensus of many subreads (i.e\. there would be several of the grey insert regions shown above in every ZMW read). By taking the consensus sequences (represented by the yellow and purple strands in the diagram below) HiFi reads have an accuracy of Q≥20 (99%)
 
-This contains the adapter (green) and barcode (red) sequences, as well as any low quality (black) regions.
-
-These BAM files will usually have an accompanying PacBio BAM index file (subreads.bam.pbi and scraps.bam.pbi).
-
-## CLR & CCS
 <center>
-![](figures/clr_and_ccs.png){style="width:800px; border-radius:15px; background:null"}
+![](figures/hifi.png){style="width:800px; border-radius:15px; background:null"}
 </center>
 
-PacBio data can be generated in two ways depending on the goal of the experiment.
 
-- __Continuous Long Reads (CLR)__ the aim is to produce sequence reads as long as possible, such as for genome assembly, sequencing through long repeat regions or finding other large structural variants. CLR runs usually generate one subread (i.e\. there would be just one or one and a bit of the grey insert regions shown above) and sequences have an error rate of ~ 10-15%.
 
-- __Circular Consensus Sequences (CCS)__ the aim is to sequence shorter molecules (up to 10-15kb max), such as amplicons, and to generate accurate consensus sequences. CCS runs generate higher-accuracy sequences from a consensus of many subreads (i.e\. there would be several of the grey insert regions shown above in every ZMW read).
-
-For this tutorial we will carry out quality checking and control on both CLR and CCS BAM files.
+For this tutorial we will carry out adapter filtering and quality checking aof a HiFi BAM file.
 
 ## Tools
 <center>
 ![](figures/toolbox.png){style="width:200px"}
 </center>
 
-### SequelTools
+### HiFiAdapterFilt
 
-https://github.com/ISUgenomics/SequelTools
+https://github.com/sheinasim/HiFiAdapterFilt
 
-We will use the `SequelTools` program to both assess and filter our PacBio CLR and CCS data.
+We will use `HiFiAdapterFilt` to remove any reads containing PacBio adapter sequences.
 
 ### smrttools
 
-https://www.pacb.com/wp-content/uploads/SMRT_Tools_Reference_Guide_v90.pdf
+https://www.pacb.com/wp-content/uploads/SMRT-Tools-Reference-Guide-v13.0.pdf
 
 We will also use `smrttools` from PacBio to:
 
 - Generate any missing index files
-- Generate CCS reads from subreads BAM files
 - Convert BAM to fasta/q format.
 
 ### RabbitQCPlus
