--- a/long_read_qc/12-PB_filtering.Rmd
+++ b/long_read_qc/12-PB_filtering.Rmd
@@ -1,4 +1,4 @@
-# CLR filtering {#clrfiltchap}
+# PacBio filtering {#pbfiltchap}
 <center>
 ![](figures/quality_filtering.png){style="width:150px; background: white; border-radius:5px"}
 </center>
